# DocumentAssistant

./: .env.example  .gitignore  DOCUMENT_UPLOAD_FLOW.md  FASTAPI_DEPENDENCY_INJECTION.md  GEN_AI_EXTENSION_IDEAS.md  RAG_IMPLEMENTATION.md  README.md  SERVICES_REFACTORING_PLAN.md  TESTING_GUIDE.md  doc2.txt  doc3.md  doc4.txt  main.py  meta.db  meta.db-shm  meta.db-wal  pyproject.toml
docs/: doc1.txt  doc5.txt  note.txt
scripts/: load_test.py  test.py
src/app/: api.py  config.py  db_mongo.py  db_sql.py  logging_config.py  main.py  queue_worker.py  rate_limit.py  rate_limit_middleware.py  rate_limit_redis.py  redis_queue.py  redis_queue_worker.py  schemas.py  utils.py
src/app/database/: __init__.py  mongo.py  sqlite.py
src/app/middleware/: __init__.py
src/app/queue/: __init__.py  queue_worker.py  redis_queue.py  redis_queue_worker.py
src/app/services/: content_extractor.py  hashing.py  image_processor.py  pdf_extractor.py  summarize.py
src/app/services/document/: __init__.py  extractors.py  summarizer.py
src/app/services/embeddings/: __init__.py  chunking.py  embeddings.py
src/app/services/rag/: __init__.py  rag.py  vector_store.py
